[package]
name = "ttv"
version = "0.1.0"
edition = "2021"
description = "This is a utility for straming videos on a Terminal"
repository = "https://github.com/Haislich/ttv"
keywords = ["Terminal, Video"]
categories = ["Terminal"]
license = "MIT OR Apache-2.0"
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
opencv = "0.88.4"
